--- a/source/2010-08-06-google-redirect-virus.html.erb
+++ b/source/2010-08-06-google-redirect-virus.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Google Redirect Virus
-post_date: 2010-08-06 20:47:34.000000000 -05:00
+post_date: 2010-08-06
 ---
 Otherwise known as the search engine redirect virus.
 
